# AudioClient

./: .gitignore  LICENSE  README.md  config.yaml  generate_file.py  main.py  pyproject.toml  resource.qrc  resource_rc.py  test.py
docs/: ExePacking.iss  VoiceClient.md  日志等级对照表.md
src/: constants.py
src/config/: __init__.py  config.py
src/core/: __init__.py  audio_handler.py  client_info.py  fsuipc_client.py  network_handler.py  transmitter.py  voice_client.py  websocket_broadcast_server.py
src/core/codecs/: opus_decoder.py  opus_encoder.py
src/core/voice/: audio_device_tester.py  audio_handler.py  network_handler.py  opus.py  stream.py  tone_generator.py  transmitter.py  voice_client.py
src/model/: __init__.py  api.py  audio.py  client_info.py  config.py  voice_models.py  websockets.py
src/signal/: __init__.py  audio_client_signals.py  joystick_signal.py  keyboard_signal.py  mouse_signal.py  sub_window_signals.py
src/thread/: __init__.py  joystick_listener.py  keyboard_listener.py  mouse_listener.py
src/ui/: client_window.py  config_window.py  connect_window.py  controller_window.py  loading_window.py  login_window.py  main_window.py  sub_window.py
src/ui/component/: __init__.py  button_group.py  frameless_widget.py  hotkey_button.py  indicator_button.py  selected_button.py
src/ui/form/: __init__.py  config_window.ui  connect_window.ui  controller_window.ui  main_window.ui  pilot_window.ui  (+1 more)
src/utils/: __init__.py  audio_utils.py  auth.py  http_client_manager.py  logger.py  qss_loader.py  utils.py  version.py  widget_utils.py
style/: style.qss
(+7 files in other folders)
