[project]
name = "AudioClient"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Half_nothing", email = "Half_nothing@163.com" },
]
dependencies = [
    "async-event-bus>=0.4.0",
    "pyside6>=6.10.0",
    "qt6-applications>=6.5.0.2.3",
    "qt6-tools>=6.5.0.1.3",
    "opuslib>=3.0.1",
    "numpy>=2.3.3",
    "pyaudio>=0.2.14",
    "httpx[http2]>=0.28.1",
    "pynput>=1.8.1",
    "soxr>=1.0.0",
    "websockets>=15.0.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "nuitka>=2.8.1",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-pyaudio>=0.2.16.20250801",
]
